# setlisterator

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setlist_to_plex.py  test_packaging.py  test_setlist_to_plex.py  test_web.py  web.py
.github/workflows/: docker.yml  tests.yml
static/: app.js
templates/: attended.html  base.html  buylist.html  created.html  error.html  history.html  index.html  preview.html  update.html  updated.html
unraid/: setlisterator.xml
